<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".puzzleofday.PuzzleOfDayActivity">

    <TextView
        android:id="@+id/status"
        android:layout_width="236dp"
        android:layout_height="81dp"
        android:text="@string/puzzle_solved"
        android:textAlignment="center"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        tools:visibility="invisible" />

    <pdm.chessroyale.views.BoardView
        android:id="@+id/boardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameGame"
        app:layout_constraintVertical_bias="0.633" />

    <TextView
        android:id="@+id/nameGame"
        android:layout_width="299dp"
        android:layout_height="68dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chessroyale"
        android:textAlignment="center"
        android:textColor="@color/chess_board_black"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/nextPlayer"
        android:layout_width="214dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:text="@string/next_player"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/nextColor"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:text="@string/white"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="serif"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/nextPlayer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solution_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/playAgain"
        app:layout_constraintTop_toBottomOf="@+id/boardView"
        app:layout_constraintVertical_bias="0.567"
        tools:text="Solution"
        tools:visibility="visible" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/play_again_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardView"
        app:layout_constraintVertical_bias="0.567"
        tools:text="Start"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>